kubernetesSample/springboot(ingress)/springboot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: test
  annotations:
    ingress.kubernetes.io/rewrite-target: /   #기본 경로 미설정시 자동으로 path 구성
spec:
  rules:
  - host: kkstest.com   #Ingress에 지정할 호스트입니다. Ingress를 사용하기 위해서는, 먼저 DNS Server가 구성되어 있어야 합니다. Domain Name과 Host Name이 조합되어 DNS Server로 호스팅 됩니다. 예를 들어 Kubernetes에 구성된 도메인이 zcp.mybluemix.net 이고, Ingress에 붙일 특정 호스트명은 cloudz-labs 라고 하면 cloudz-labs.zcp.mybluemix.net 으로 호스트를 지정하면 됩니다.
    http:
      paths:
        - path: /hello-world  #앞에 지정한 host 하위로 붙는 경로
          backend:
            serviceName: springboot-svc       #실제로 라우팅할 서비스 이름
            servicePort: 8080                 #라우팅할 포트 설정
            
# L7 traffic requires the nginx
# 이것만해서는 ingress가 진행되지 않는다.
# https://github.com/kubernetes/ingress-nginx/blob/master/docs/deploy/index.md#minikube
